Feature/update java11 (#62)